# benchmarksuite

./: .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  clang.sh  gcc.sh  msvc.ps1
.github/workflows/: benchmark-debug.yml  benchmark.yml  unit-tests.yml
build_tools/classes/packager/: Vcpkg.php
cmake/: flags_and_options.cmake  get_version.cmake  installation_setup.cmake  library_setup.cmake
cmake/detection/: BuildFeatureTesterGpuProperties.bat  CMakeLists.txt  benchmarksuite_cpu_properties.hpp.in  benchmarksuite_detect_cpu_properties.cmake  benchmarksuite_detect_gpu_properties.cmake  benchmarksuite_gpu_properties.hpp.in  main.cpp
include/: bnch_swt
include/bnch_swt/: aligned_const.hpp  benchmarksuite_cpu_properties.hpp  benchmarksuite_gpu_properties.hpp  cache_clearer.hpp  concepts.hpp  config.hpp  do_not_optimize.hpp  event_counter.hpp  file_loader.hpp  index.hpp  metrics.hpp  printable.hpp  random_generators.hpp  string_literal.hpp
include/bnch_swt-incl/: aligned_const.hpp  benchmarksuite_cpu_properties.hpp  benchmarksuite_gpu_properties.hpp  cache_clearer.hpp  config.hpp  device_info.hpp  do_not_optimize.hpp  event_counter.hpp  file_handle.hpp  index.hpp  metrics.hpp  printable.hpp  random_generators.hpp  string_literal.hpp  thread_affinity.hpp  utility.hpp
include/bnch_swt-incl/counters/: apple_arm_perf_events.hpp  cuda_perf_events.hpp  linux_perf_events.hpp  windows_perf_events.hpp
include/bnch_swt/counters/: andriod_events.hpp  apple_arm_perf_events.hpp  cuda_perf_events.hpp  linux_perf_events.hpp  windows_perf_events.hpp
src/: CMakeLists.txt  DToStr.hpp  DragonBox.hpp  main.cpp  main.cu  utf8_validator.hpp
sweep_results/: msvc_cpb16_bps1.txt  msvc_cpb16_bps16.txt  msvc_cpb16_bps2.txt  msvc_cpb16_bps4.txt  msvc_cpb16_bps8.txt  msvc_cpb1_bps1.txt  msvc_cpb1_bps16.txt  msvc_cpb1_bps2.txt  msvc_cpb1_bps4.txt  msvc_cpb1_bps8.txt  msvc_cpb2_bps1.txt  msvc_cpb2_bps16.txt  msvc_cpb2_bps2.txt  msvc_cpb2_bps4.txt  msvc_cpb2_bps8.txt  msvc_cpb4_bps1.txt  msvc_cpb4_bps16.txt  msvc_cpb4_bps2.txt  msvc_cpb4_bps4.txt  msvc_cpb4_bps8.txt  msvc_cpb8_bps1.txt  msvc_cpb8_bps16.txt  msvc_cpb8_bps2.txt  msvc_cpb8_bps4.txt  msvc_cpb8_bps8.txt
unit-tests/: CMakeLists.txt  main.cpp  main.cu
vcpkg/ports/rtc-benchmarksuite/: portfile.cmake
vcpkg/versions/b-/: benchmarksuite.json
vcpkg/versions/r-/: rtc-benchmarksuite.json
